@@ -42,7 +42,6 @@ struct NPObject;
 
 namespace KJS {
     class Interpreter;
-    
     namespace Bindings {
         class Instance;
         class RootObject;
@@ -109,8 +108,6 @@ template <typename T> class Timer;
 
 class Frame : public Shared<Frame> {
 public:
-    static double currentPaintTimeStamp() { return s_currentPaintTimeStamp; } // returns 0 if not painting
-    
     Frame(Page*, HTMLFrameOwnerElement*, FrameLoaderClient*);
     virtual void setView(FrameView*);
     virtual ~Frame();
@@ -139,19 +136,16 @@ public:
     SelectionController* selectionController() const;
     FrameTree* tree() const;
 
+    // FIXME: Rename to contentRenderer and change type to RenderView.
     RenderObject* renderer() const; // root renderer for the document contained in this frame
     RenderPart* ownerRenderer(); // renderer for the element that contains this frame
 
     friend class FramePrivate;
 
-    DragImageRef dragImageForSelection();
-    
 private:
-    static double s_currentPaintTimeStamp; // used for detecting decoded resource thrash in the cache
-    
     FramePrivate* d;
     
-// === undecided, may or may not belong here
+// === undecided, would like to consider moving to another class
 
 public:
     static Frame* frameForWidget(const Widget*);
@@ -159,26 +153,13 @@ public:
     Settings* settings() const; // can be NULL
     void reparseConfiguration();
 
-    // should move to FrameView
-    void paint(GraphicsContext*, const IntRect&);
-    void setPaintRestriction(PaintRestriction);
-    bool isPainting() const;
-
     void setUserStyleSheetLocation(const KURL&);
     void setUserStyleSheet(const String& styleSheetData);
-
-    void setZoomFactor(int percent);
-    int zoomFactor() const;
 
     void setPrinting(bool printing, float minPageWidth, float maxPageWidth, bool adjustViewSize);
 
     bool inViewSourceMode() const;
     void setInViewSourceMode(bool = true) const;
-
-    void setJSStatusBarText(const String&);
-    void setJSDefaultStatusBarText(const String&);
-    String jsStatusBarText() const;
-    String jsDefaultStatusBarText() const;
 
     void keepAlive(); // Used to keep the frame alive when running a script that might destroy it.
 #ifndef NDEBUG
@@ -202,31 +183,17 @@ public:
 
     KJSProxy* scriptProxy();
 
-    bool isFrameSet() const;
-
-    void adjustPageHeight(float* newBottom, float oldTop, float oldBottom, float bottomLimit);
-
-    void forceLayout(bool allowSubtree = false);
-    void forceLayoutWithPageWidthRange(float minPageWidth, float maxPageWidth, bool adjustViewSize);
-
-    void sendResizeEvent();
-    void sendScrollEvent();
-
     void clearTimers();
     static void clearTimers(FrameView*);
 
     bool isActive() const;
     void setIsActive(bool flag);
-    void setWindowHasFocus(bool flag);
 
     // Convenience, to avoid repeating the code to dig down to get this.
     UChar backslashAsCurrencySymbol() const;
 
     void setNeedsReapplyStyles();
     String documentTypeString() const;
-
-    bool prohibitsScrolling() const;
-    void setProhibitsScrolling(const bool);
 
     void dashboardRegionsChanged();
 
@@ -241,6 +208,42 @@ private:
 
     void lifeSupportTimerFired(Timer<Frame>*);
     
+// === to be moved into Document
+
+public:
+    bool isFrameSet() const;
+
+// === to be moved into EventHandler
+
+public:
+    void sendResizeEvent();
+    void sendScrollEvent();
+
+    void setWindowHasFocus(bool flag);
+
+// === to be moved into FrameView
+
+public:
+    void paint(GraphicsContext*, const IntRect&);
+    void setPaintRestriction(PaintRestriction);
+    bool isPainting() const;
+
+    static double currentPaintTimeStamp() { return s_currentPaintTimeStamp; } // returns 0 if not painting
+    
+    void forceLayout(bool allowSubtree = false);
+    void forceLayoutWithPageWidthRange(float minPageWidth, float maxPageWidth, bool adjustViewSize);
+
+    void adjustPageHeight(float* newBottom, float oldTop, float oldBottom, float bottomLimit);
+
+    void setZoomFactor(int percent);
+    int zoomFactor() const; // FIXME: This is a multiplier for text size only; needs a better name.
+
+    bool prohibitsScrolling() const;
+    void setProhibitsScrolling(const bool);
+
+private:
+    static double s_currentPaintTimeStamp; // used for detecting decoded resource thrash in the cache
+
 // === to be moved into Chrome
 
 public:
@@ -248,6 +251,11 @@ public:
     void unfocusWindow();
     bool shouldClose();
     void scheduleClose();
+
+    void setJSStatusBarText(const String&);
+    void setJSDefaultStatusBarText(const String&);
+    String jsStatusBarText() const;
+    String jsDefaultStatusBarText() const;
 
 // === to be moved into Editor
 
@@ -271,9 +279,6 @@ public:
 
     IntRect firstRectForRange(Range*) const;
     
-#if PLATFORM(MAC)
-    void issuePasteCommand();
-#endif
     void issueTransposeCommand();
     void respondToChangedSelection(const Selection& oldSelection, bool closeTyping);
     bool shouldChangeSelection(const Selection& oldSelection, const Selection& newSelection, EAffinity, bool stillSelecting) const;
@@ -293,6 +298,8 @@ public:
     void textWillBeDeletedInTextField(Element* input);
     void textDidChangeInTextArea(Element*);
 
+    DragImageRef dragImageForSelection();
+    
 // === to be moved into SelectionController
 
 public:
@@ -342,9 +349,10 @@ public:
     
     VisiblePosition visiblePositionForPoint(const IntPoint& framePoint);
     Document* documentAtPoint(const IntPoint& windowPoint);
+
 #if PLATFORM(MAC)
 
-// === undecided, may or may not belong here
+// === undecided, would like to consider moving to another class
 
 public:
     NSString* searchForNSLabelsAboveCell(RegularExpression*, HTMLTableCellElement*);
@@ -372,6 +380,7 @@ public:
 public:
     NSDictionary* fontAttributesForSelectionStart() const;
     NSWritingDirection baseWritingDirectionForSelectionStart() const;
+    void issuePasteCommand();
 
 #endif
 
